Acrescentando título e parágrafo ao projeto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    Bem-vindo ao Git hub
+    <h1>
+        Bem-vindo ao Git hub
+    </h1>
+    <p>Versionamento de código de uma forma muito simples e intuitiva!!!</p>
 </body>
 </html>
