--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         Bem-vindo ao Git hub
     </h1>
     <p>Versionamento de código de uma forma muito simples e intuitiva!!!</p>
+    <p>A pratica é a melhor ferramenta de aprendizado que existe, só ela pode levá-lo à um novo patamar em termos de conhecimento</p>
 </body>
 </html>
