--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
     </h1>
     <p>Versionamento de código de uma forma muito simples e intuitiva!!!</p>
     <p>A pratica é a melhor ferramenta de aprendizado que existe, só ela pode levá-lo à um novo patamar em termos de conhecimento</p>
+    <p>Pratica um pouco mais do git</p>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+    </ul>
+
+    <a href="#" target="_blank">Clique aqui para se informar</a>
 </body>
 </html>
