adição de estilo para link e criação de classes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <li>Javascript</li>
     </ul>
 
-    <a href="#" target="_blank">Clique aqui para se informar</a>
+    <a href="#" target="_blank" class="bt-link">Clique aqui para se informar</a>
 </body>
 </html>
