dois novos itens na lista do arquivo index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <li>HTML</li>
         <li>CSS</li>
         <li>Javascript</li>
+        <li>Git hub e Git Bash</li>
+        <li>Praticando módulos e conhecimentos antes de subir um novo degrau</li>
     </ul>
 
     <a href="#" target="_blank" class="bt-link">Clique aqui para se informar</a>
