novo link adicionado

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li>Praticando módulos e conhecimentos antes de subir um novo degrau</li>
     </ul>
 
-    <a href="#" target="_blank" class="bt-link">Clique aqui para se informar</a>
+    <a href="#" target="_blank" class="bt-link">Clique aqui para se informar</a><br />
+    <a href="#">Para mais informações, clique neste link</a>
 </body>
 </html>
